[tool.poetry]
name = "pythonbox-router"
version = "0.1.0"
description = ""
authors = ["celeste <parafactual@gmail.com>"]
readme = "README.md"
packages = [{include = "pythonbox_router"}]

[tool.poetry.dependencies]
python = "^3.10"
Flask = "^2.2.2"
requests = "^2.28.1"
flask-cors = "^3.0.10"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
